working to finish maman01. organize q2 and finish commenting and fixing bugs